# creeper-dripper

./: .env.example  .gitignore  HANDOFF.md  README.md  bootstrap.sh  hachi_swap_only_drip_sell.py  pyproject.toml  requirements.txt
creeper_dripper/: cache.py  config.py  errors.py  models.py  observability.py  utils.py
docs/: ARCHITECTURE_LOCK.md  runtime_snapshot_playbook.md
tests/: conftest.py  test_accounting_reconciliation.py  test_accounting_safety_guard.py  test_birdeye_audit.py  test_birdeye_client.py  test_cash_sol_accounting.py  test_cleanup_dust.py  test_cli_operator.py  test_dashboard_truth_birdeye_mode.py  test_discovery_conditional_enrichment_skip.py  test_discovery_optimization.py  test_discovery_two_phase_birdeye.py  test_drip_exit.py  test_dynamic_daily_capacity.py  test_early_risk_bucket.py  test_entry_capacity_mode.py  test_execution_swap_path.py  test_exit_blocked_recovery.py  test_exit_liquidity_fallback.py  test_final_zombie_recovery_probe.py  test_hachi_brain.py  test_hachi_dripper.py  test_jsds_liquidity.py  test_jupiter_probe_classification.py  test_liquidity_aware_entry_gating.py  test_phase3_observability.py  test_policy_observability_runtime_artifacts.py  test_position_exits.py  test_position_pricing.py  test_recovery_and_state.py  test_retry_backoff_bounds.py  test_run_id_observability.py  test_runtime_policy.py  test_scan_persistence.py  test_scoring.py  test_sell_reconcile.py  test_t005_t008_bundle.py  test_t022_data_capture_hardening.py  test_t023_shallow_discovery_capture.py  test_t024_economics_field_persistence.py  (+4 more)
(+107 files in other folders)
